--- a/wp-content/themes/zero/templates/sections/header-1/header-1.css
+++ b/wp-content/themes/zero/templates/sections/header-1/header-1.css
@@ -188,7 +188,7 @@ body.side-menu-opened .header-1.ff-section .menu-button 	{
 	display: block;
 	width: 20px;
 	height: 2px;
-	background-color: rgba(0,0,0,0.72);
+	background-color: #E12035;
 	position: absolute;
 	left: 0;
 
