Fixing Footer Color

--- a/wp-content/themes/zero/templates/sections/footer-2/footer-2.css
+++ b/wp-content/themes/zero/templates/sections/footer-2/footer-2.css
@@ -1,5 +1,5 @@
 .footer-2.ff-section 	{
-	background-color: #E15453;
+	background-color: #df1e33;
 	padding: 0 0 16px 0;
 	font-size: 9px;
 	font-weight: 400;
