--- a/wp-content/themes/zero/templates/sections/side-menu-1/side-menu-1.css
+++ b/wp-content/themes/zero/templates/sections/side-menu-1/side-menu-1.css
@@ -1,5 +1,5 @@
 .side-menu-1.ff-section .navigation {
-	font-family: "Walsheim-Medium" !important;
+	font-family: "walsheim-medium" !important;
 }
 
 .ff-font-zocial:hover{
