--- a/wp-content/themes/zero/templates/sections/footer-2/footer-2.css
+++ b/wp-content/themes/zero/templates/sections/footer-2/footer-2.css
@@ -1,3 +1,7 @@
+.footer-2__text {
+	font-family: "walsheim-medium" !important;
+}
+
 .footer-2.ff-section 	{
 	background-color: #df1e33;
 	padding: 0 0 16px 0;
