--- a/wp-content/themes/zero/templates/sections/footer-2/footer-2.css
+++ b/wp-content/themes/zero/templates/sections/footer-2/footer-2.css
@@ -1,5 +1,5 @@
 .footer-2__text {
-	font-family: "walsheim-medium" !important;
+	font-family: "Walsheim-Medium" !important;
 }
 
 .footer-2.ff-section 	{
