--- a/wp-content/themes/zero/templates/sections/header-1/header-1.css
+++ b/wp-content/themes/zero/templates/sections/header-1/header-1.css
@@ -1,7 +1,7 @@
 
 
 .header-1.ff-section .menu-button__label {
-	font-family: "walsheim-medium" !important;
+	font-family: "Walsheim-Medium" !important;
 	text-transform: uppercase;
 }
 
