--- a/wp-content/themes/zero/templates/sections/side-menu-1/side-menu-1.css
+++ b/wp-content/themes/zero/templates/sections/side-menu-1/side-menu-1.css
@@ -2,7 +2,7 @@
 	font-family: "Walsheim-Medium" !important;
 }
 
-.ff-font-zocial:hover{
+.social-icon:hover .ff-font-zocial {
 	color: #DF1E33;
 }
 
