--- a/wp-content/themes/zero/templates/sections/header-1/header-1.css
+++ b/wp-content/themes/zero/templates/sections/header-1/header-1.css
@@ -165,7 +165,7 @@ body.side-menu-opened .header-1.ff-section .menu-button 	{
 }
 
 .header-1.ff-section .menu-button .background--light 	{
-	background-color: #df1e33;
+	color: #df1e33;
 }
 
 .header-1.ff-section .menu-button .background--dark 	{
